--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,10 @@
 
 .button-container {
     position: absolute;
-    top: 30%;
+    top: 400px;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
+    max-width: fit-content;
 }
 
 .overlay-button {
