--- a/src/components/CreatorCard.css
+++ b/src/components/CreatorCard.css
@@ -3,14 +3,14 @@
     height: 100px;
     border-radius: 50%;
     left: 20%;
-    top: 20%
+    top: 20%;
 }
 
 .logo_cont{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%
+    height: 100%;
 }
 
 .social_logo{
@@ -19,14 +19,48 @@
 }
 
 .creator_card{
-    margin: 10%;
+    margin: 20px;
     padding: 10px;
     border-radius: 20px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
     width: 500px;
-    height: 200px;
+    min-height: 260px;
+    max-height: 500px;
+    text-align: center;
 }
 
 .name{
     padding-top: 15px;
+    margin: auto;
+}
+
+.threedot{
+    height: 30px;
+    rotate: 90deg;
+    align-self: flex-end;
+    margin-top: 5px;
+}
+
+.threedot:hover{
+    filter: invert(48%) sepia(10%) saturate(0%) hue-rotate(240deg) brightness(102%) contrast(90%);
+}
+
+.dropdown{
+    position: absolute;
+    transform: translate(450px, 35px);
+    background-color: white;
+    border: 2px black;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.dropdown a{
+    text-decoration: none;
+    color: black;
+}
+
+.dropdown a:hover{
+    cursor: pointer;
+    color: gray;
 }
