--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,18 @@
     transform: translate(-50%, 0%);
     max-width: fit-content;
 }
+.creatorHub{
+    position: absolute;
+    top: 300px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.9);
+    color: white;
+}
+
+h1 {
+    font-size: 500%;  
+ }
 
 .overlay-button {
     margin: 5px;
